@@ -1,14 +1,13 @@
 package by.teachmeskills.eshop.utils;
 
 import by.teachmeskills.eshop.model.Category;
-import java.util.Arrays;
 import java.util.List;
 import lombok.experimental.UtilityClass;
 
 @UtilityClass
 public class CategoryHelper {
 
-    public static final List<Category> categories = Arrays.asList(
+    public static final List<Category> categories = List.of(
             new Category(1, "Mobile phones", "mobile.jpg"),
             new Category(2, "Laptops", "laptop.jpg"),
             new Category(3, "GPS Navigators", "jps_nav.jpg"),
